// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders IconFilledCheckCircle if we pass true for a \`Required\` columm 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow-x: auto;
}

.emotion-1 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-2 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-3 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-4 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-5 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-6 {
  padding: 16px 16px 16px 0;
  max-width: 100px;
  text-align: left;
  vertical-align: top;
  overflow: hidden;
}

.emotion-7 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-style: solid;
  border-color: #0A782A;
  background-color: #E6FAEB;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-7 svg {
  width: 16px;
  height: 16px;
}

.emotion-7 svg {
  fill: #0A782A;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-10 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #0A782A;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-10 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-10 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-10.emotion-10 {
  fill: #0A782A;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-10.emotion-10 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-10.emotion-10 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-12 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  border-width: 0;
}

.emotion-15 {
  fill: #E4E4E4;
  vertical-align: unset;
  display: inline-block;
  margin: 0 6px;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-15 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-15 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-15.emotion-15 {
  width: 12px;
  height: 12px;
  fill: #E4E4E4;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-15.emotion-15 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-15.emotion-15 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

<div
    class="emotion-0"
  >
    <table
      class="emotion-1"
    >
      <thead>
        <tr>
          <th
            class="emotion-2"
          >
            Column
          </th>
          <th
            class="emotion-3"
          >
            Required
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="emotion-4"
        >
          <td
            class="emotion-5"
          >
            column
          </td>
          <td
            class="emotion-6"
          >
            <div
              class="emotion-7"
              data-testid="flag"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-10 emotion-11"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-12"
        >
          <td
            class="emotion-5"
          >
            column
          </td>
          <td
            class="emotion-6"
          >
            <svg
              aria-hidden="true"
              class="emotion-15"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="12"
              />
            </svg>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Table renders links correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow-x: auto;
}

.emotion-1 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-2 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-3 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-4 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  white-space: nowrap;
  vertical-align: top;
}

.emotion-5 {
  display: inline-block;
  color: #577FFB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-5 {
    transition-property: color,fill;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-5 {
    transition-property: color,fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-5 svg {
  fill: #577FFB;
}

.emotion-5:hover:not(:disabled) {
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #3358CC;
}

.emotion-5:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-5:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-5:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-7 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  display: block;
}

.emotion-7::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-7::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-8 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  border-width: 0;
}

<div
    class="emotion-0"
  >
    <table
      class="emotion-1"
    >
      <thead>
        <tr>
          <th
            class="emotion-2"
          >
            Component
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="emotion-3"
        >
          <td
            class="emotion-4"
          >
            <a
              class="emotion-5"
              href="/components/button"
            >
              <span
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  Button
                </span>
              </span>
            </a>
          </td>
        </tr>
        <tr
          class="emotion-8"
        >
          <td
            class="emotion-4"
          >
            <span>
              test
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Table renders number values automatically if undefined 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow-x: auto;
}

.emotion-1 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-2 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-4 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-5 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6 {
  padding: 16px 16px 16px 0;
  max-width: 100px;
  text-align: left;
  vertical-align: top;
  overflow: hidden;
}

.emotion-7 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: #FFFFFF;
  background-color: #577FFB;
  border-radius: 8px;
  white-space: nowrap;
}

.emotion-7 svg {
  width: 16px;
  height: 16px;
}

.emotion-7 svg {
  fill: #FFFFFF;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-10 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-10::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-10::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-16 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-29 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  border-width: 0;
}

<div
    class="emotion-0"
  >
    <table
      class="emotion-1"
    >
      <thead>
        <tr>
          <th
            class="emotion-2"
          >
            Item
          </th>
          <th
            class="emotion-2"
          >
            Order
          </th>
          <th
            class="emotion-4"
          >
            Description
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="emotion-5"
        >
          <td
            class="emotion-6"
          >
            <div
              class="emotion-7"
              data-testid="flag"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <span
                    class="emotion-10"
                  >
                    1
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td
            class="emotion-6"
          >
            <div
              class="emotion-7"
              data-testid="flag"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <span
                    class="emotion-10"
                  >
                    1
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td
            class="emotion-16"
          >
            one
          </td>
        </tr>
        <tr
          class="emotion-5"
        >
          <td
            class="emotion-6"
          >
            <div
              class="emotion-7"
              data-testid="flag"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <span
                    class="emotion-10"
                  >
                    2
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td
            class="emotion-6"
          >
            <div
              class="emotion-7"
              data-testid="flag"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <span
                    class="emotion-10"
                  >
                    2
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td
            class="emotion-16"
          >
            two
          </td>
        </tr>
        <tr
          class="emotion-29"
        >
          <td
            class="emotion-6"
          >
            <div
              class="emotion-7"
              data-testid="flag"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <span
                    class="emotion-10"
                  >
                    3
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td
            class="emotion-6"
          >
            <div
              class="emotion-7"
              data-testid="flag"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <span
                    class="emotion-10"
                  >
                    3
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td
            class="emotion-16"
          >
            three
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Table renders with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow-x: auto;
}

.emotion-1 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-2 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-4 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-5 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-7 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  border-width: 0;
}

<div
    class="emotion-0"
  >
    <table
      class="emotion-1"
    >
      <thead>
        <tr>
          <th
            class="emotion-2"
          >
            Col
          </th>
          <th
            class="emotion-2"
          >
            Column
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="emotion-4"
        >
          <td
            class="emotion-5"
          >
            col
          </td>
          <td
            class="emotion-5"
          >
            column
          </td>
        </tr>
        <tr
          class="emotion-7"
        >
          <td
            class="emotion-5"
          >
            col
          </td>
          <td
            class="emotion-5"
          >
            column
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Table wraps content with styledFlag if the column is either Name, Type or Default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow-x: auto;
}

.emotion-1 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-2 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-3 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-5 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-7 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #F4F4F4;
  border-radius: 4px;
  color: #2E2E2E;
  white-space: nowrap;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-8 svg {
  fill: #2E2E2E;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-11 {
  margin: 0;
  font-family: 'DM Mono',courier;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.4285714285714286;
  padding: 1px 0px;
  display: inline-block;
}

.emotion-11::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4267857142857143em;
}

.emotion-11::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3642857142857143em;
}

.emotion-17 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  border-width: 0;
}

<div
    class="emotion-0"
  >
    <table
      class="emotion-1"
    >
      <thead>
        <tr>
          <th
            class="emotion-2"
          >
            Name
          </th>
          <th
            class="emotion-3"
          >
            Type
          </th>
          <th
            class="emotion-3"
          >
            Default
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="emotion-5"
        >
          <td
            class="emotion-6"
          >
            name
          </td>
          <td
            class="emotion-7"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    type
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td
            class="emotion-7"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    default
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-17"
        >
          <td
            class="emotion-6"
          >
            name
          </td>
          <td
            class="emotion-7"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    type
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td
            class="emotion-7"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    default
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Table wraps content with styledFlag if the column is either Name, Type or Default styles 2`] = `
<DocumentFragment>
  .emotion-0 {
  overflow-x: auto;
}

.emotion-1 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-2 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-3 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-5 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-7 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #F4F4F4;
  border-radius: 4px;
  color: #2E2E2E;
  white-space: nowrap;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-8 svg {
  fill: #2E2E2E;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-11 {
  margin: 0;
  font-family: 'DM Mono',courier;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.4285714285714286;
  padding: 1px 0px;
  display: inline-block;
}

.emotion-11::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4267857142857143em;
}

.emotion-11::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3642857142857143em;
}

.emotion-17 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  border-width: 0;
}

<div
    class="emotion-0"
  >
    <table
      class="emotion-1"
    >
      <thead>
        <tr>
          <th
            class="emotion-2"
          >
            Name
          </th>
          <th
            class="emotion-3"
          >
            Type
          </th>
          <th
            class="emotion-3"
          >
            Default
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="emotion-5"
        >
          <td
            class="emotion-6"
          >
            name
          </td>
          <td
            class="emotion-7"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    type
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td
            class="emotion-7"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    default
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-17"
        >
          <td
            class="emotion-6"
          >
            name
          </td>
          <td
            class="emotion-7"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    type
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td
            class="emotion-7"
          >
            <div
              class="emotion-8"
              data-testid="flag"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <span
                    class="emotion-11"
                  >
                    default
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
